--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,9 @@ body {
     --sidebar-ring: 217.2 91.2% 59.8%;
     --btnViolet: 262 100% 65%;
     --btnVioletHover: 261 100% 73%;
+    --btnBlue: 221 100% 63%;
+    --btnBlueHover: 221 100% 67%;
+    --bgBlur: 210 20% 50% 0.8;
     --titlePrimary: 261 81% 35%;
     --textPrimary: 261 67% 9%;
     --border-color: #141414;
