feat: add contac us component 🚀

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@ body {
     --bgBlur: 210 20% 50% 0.8;
     --titlePrimary: 261 81% 35%;
     --textPrimary: 261 67% 9%;
+    --textSecondary: 261 81% 73%;
     --border-color: #141414;
     --bgBtnColor: #F2F2F2;
     --hoverBgBtn: #cacaca;
